Preferences - Hidden Storage plans

--- a/language/en.json
+++ b/language/en.json
@@ -10,7 +10,7 @@
     "about"   : "About",
     
     "hddTitle"         : "YOUR HARD DRIVE",
-    "hddDescription"   : "Here you can change your plan and view how much free space you have left",
+    "hddDescription"   : "Here you view how much free space you have left",
     "currentUsage"     : "Current usage",
     "moreFeatures"     : "Need More Features?",
     "freeSpace"        : "Free",
