--- a/language/es.json
+++ b/language/es.json
@@ -10,7 +10,7 @@
     "about"   : "Acerca",
     
     "hddTitle"         : "TU DISCO DURO",
-    "hddDescription"   : "Aquí puedes cambiar tu plan o ver cuanto espacio te queda libre",
+    "hddDescription"   : "Aquí puedes ver cuanto espacio te queda libre",
     "currentUsage"     : "Uso actual",
     "moreFeatures"     : "¿Más funciones?",
     "freeSpace"        : "Libres",
