--- a/language/es.json
+++ b/language/es.json
@@ -1,6 +1,6 @@
 
 {
-    
+
     "hdd"     : "Disco",
     "account" : "Cuenta",
     "social"  : "Redes Sociales",
@@ -9,7 +9,7 @@
     "invite"  : "Invitar",
     "backup"  : "Backup",
     "about"   : "Acerca",
-    
+
     "hddTitle"         : "TU DISCO DURO",
     "hddDescription"   : "Aquí puedes ver cuanto espacio te queda libre",
     "currentUsage"     : "Uso actual",
@@ -24,7 +24,7 @@
     "ultimate"         : "Ultimate",
     "ultimatePrice"    : "14,99€",
     "monthly"          : "mensual",
-    "forever"          : "para siempre",    
+    "forever"          : "para siempre",
     "FREE"             : "GRATIS",
     "storage"          : "de espacio",
     "starterUsage"     : "Uso con Starter",
@@ -44,6 +44,8 @@
     "accountTitle"       : "TU CUENTA",
     "accountDescription" : "Aquí puedes cambiar tu información personal",
     "avatarEdit"         : "CAMBIAR",
+    "accountUser"        : "USUARIO",
+    "accountMailUser"    : "CORREO",
     "changePassword"     : "Cambiar Contraseña",
     "saveChanges"        : "Guardar Cambios",
     "usernameChanged"    : "Nombre de usuario cambiado",
@@ -52,13 +54,17 @@
     "mailChanged2"       : "Tu cuenta de correo ha sido cambiada por",
 
     "passwordTitle"       : "TU CONTRASEÑA",
-    "passwordDescription" : "Aquí puedes cambiar tu contraseña actual",
+    "passwordDescription" : "Aquí puedes cambiar tu contraseña o recuperarla.",
     "cancel"              : "Cancelar",
     "currentPassword"     : "Contraseña Actual",
+    "currentPasswordType" : "Escribe tu actual contraseña",
     "newPassword"         : "Nueva Contraseña",
+    "newPasswordType"     : "Escribe la nueva contraseña",
     "confirmPassword"     : "Confirma Nueva Contraseña",
+    "confirmPasswordType" : "Confirma la nueva contraseña",
     "passwordChanged"     : "Contraseña cambiada",
     "passwordChanged2"    : "Tu contraseña ha sido cambiada correctamente",
+    "forgetPassword"      : "¿Olvidaste la contraseña?",
 
     "socialTitle"       : "REDES SOCIALES",
     "socialDescription" : "Aquí puedes asociar tus cuentas de redes sociales con tu cuenta de Inevio",
@@ -74,9 +80,11 @@
     "ddmmyy"          : "DD MM AA",
     "mmddyy"          : "MM DD AA",
     "yymmdd"          : "AA MM DD",
-    
+
     "languageTitle"       : "IDIOMA",
     "languageDescription" : "Por favor selecciona el idioma de tu Inevio",
+    "spanishLanguage"     : "Español",
+    "englishLanguage"     : "Inglés",
 
     "extensionsTitle"   : "EXTENSIONES",
     "displayExtensions" : "Mostrar la extensión al final de los nombres de ficheros",
