--- a/language/es.json
+++ b/language/es.json
@@ -3,6 +3,7 @@
 
     "appName" : "Preferencias",
     "hdd"     : "Disco",
+    "space"   : "Espacio",
     "account" : "Cuenta",
     "social"  : "Redes Sociales",
     "config"  : "Configuración",
