--- a/language/en.json
+++ b/language/en.json
@@ -56,7 +56,7 @@
     "creditCard"       :  "Credit card",
     "inevioCredit"     :  "Inevio credit",
     "delete"           :  "Delete",
-    "extra"            :  "GB extra",
+    "extra"            :  "GB Extra",
     "euroMonth"        :  "€/MONTH",
     "euroMonthMinus"   :  "€/mes",
     "perMonth"         :  "/month",
@@ -65,6 +65,19 @@
     "partTwoPayDay"    :  " of each month.",
     "add" : "Add",
     "totalMayus"  : "TOTAL",
+    "addCard"       :"Add card",
+    "noCardInfo"    : "If no card is added, the current plan can not be charged. If so, this will be canceled.",
+    "infoPlanPremium" :
+    [
+      "25",
+      "GB",
+      "for just",
+      "Extra",
+      "1€",
+      "/month"
+    ],
+
+
 
     "infoPaymentOneHead"  : "It´s up to you",
     "infoPaymentOneBody"  : "Pay only for what you consume Extra 25 Gb per 1€/month on your account.",
@@ -74,6 +87,7 @@
     "summary"   : "Summary",
     "order"     : "Order",
     "currentSpace"  : "Actual storage",
+    "currentSpaceMayus" : "ACTUAL STORAGE",
     "totalStorage"    : "Total storage",
     "totalStorageMayus":  "TOTAL STORAGE",
 
