--- a/language/en.json
+++ b/language/en.json
@@ -79,6 +79,8 @@
       "/month"
     ],
 
+      "unlimitedStorage" :"Unlimited storage",
+
 
 
     "infoPaymentOneHead"  : "It´s up to you",
@@ -203,6 +205,7 @@
         "followMessage" : "now follows you"
 
     },
+
 
     "twitterOptions" : [
 
