--- a/language/en.json
+++ b/language/en.json
@@ -108,6 +108,7 @@
 
     "next"        : "Next",
     "congratulation"    :  "Congratulations! You have your space increased to ",
+    "decrease"    :  "Done! Your space has decreased to",
     "finish"      : "Finish",
 
 
