--- a/language/es.json
+++ b/language/es.json
@@ -64,7 +64,7 @@
 
     "partPayDay"      : [
       "Se cobra el ",
-      " de cada mes."
+      " del próximo mes."
     ],
 
     "add" : "Añadir ",
